fix form validation in main page

--- a/src/sass/Sec5.scss
+++ b/src/sass/Sec5.scss
@@ -1,4 +1,5 @@
 @media screen and (min-width : 320px) {
+
     .sec__5 {
         width: 100%;
         height: 891px;
@@ -31,21 +32,33 @@
             .input {
                 position: relative;
                 width: 100%;
+                height: 54px;
+                border: none;
+                background-color: white;
+                border-radius: 10px;
+
+                .danger {
+                    border: 2px solid red !important;
+                }
+                .success {
+                    border: 2px solid green !important;
+                }
     
                 input {
                     position: absolute;
                     width: 100%;
                     height: 54px;
                     background-color: white;
-                    border: none;
+                    border: 1px solid white;
                     outline-style: none;
                     border-radius: 10px;
+        
                     &::placeholder {
                         padding-right: 15px;
                         font-size: 12px;
                     }
-                    &:active {
-                        background-color: #F5F5F5;
+                    &:focus {
+                        background-color: #F5F5F5; 
                     }
                 }
                 button {
