--- a/src/sass/Sec5.scss
+++ b/src/sass/Sec5.scss
@@ -25,7 +25,7 @@
             }
         }
         .inputs {
-            width: 90%;
+            width: 80%;
             margin: 0 auto;
             height: 60px;
     
@@ -38,23 +38,24 @@
                 border-radius: 10px;
 
                 .danger {
-                    border: 2px solid red !important;
+                    border: 1px solid red !important;
                 }
                 .success {
-                    border: 2px solid green !important;
+                    border: 1px solid #1894FF !important;
                 }
     
                 input {
                     position: absolute;
-                    width: 100%;
+                    width: 96%;
                     height: 54px;
                     background-color: white;
                     border: 1px solid white;
                     outline-style: none;
                     border-radius: 10px;
+                    padding-right: 10px;
         
                     &::placeholder {
-                        padding-right: 15px;
+                        padding-right: 10px;
                         font-size: 12px;
                     }
                     &:focus {
