--- a/src/sass/Sec6.scss
+++ b/src/sass/Sec6.scss
@@ -46,14 +46,28 @@
             height: 55px;
             border-radius: 10px;
             position: relative;
-    
-            input {
+
+            
+
+            .input {
+                width: 100%;
+                height: 55px;
+
+                .success {
+                    border: 1px solid #2361B5;
+                }
+                .danger {
+                    border: 1px solid red;
+                }
+
+                 input {
+                width: 100%;
                 height: inherit;
                 background-color: #F9F9F9;
                 border: none;
                 outline-style: none;
                 border-radius: 10px;
-                margin-right: 5px;
+                padding-right: 5px;
     
                 &::placeholder {
                     padding-right: 15px;
@@ -69,9 +83,12 @@
                 border: none;
                 border-radius: 10px;
                 position: absolute;
-                top: 13%;
-                left: 5%;
+                top: 20%;
+                left: 2%;
             }
+          }
+    
+           
         }
     }
 }
