complete header in laptop devices

--- a/src/sass/Sec6.scss
+++ b/src/sass/Sec6.scss
@@ -67,7 +67,7 @@
                 border: none;
                 outline-style: none;
                 border-radius: 10px;
-                padding-right: 5px;
+                padding-right: 10px;
     
                 &::placeholder {
                     padding-right: 15px;
@@ -84,7 +84,7 @@
                 border-radius: 10px;
                 position: absolute;
                 top: 20%;
-                left: 2%;
+                left: 0;
             }
           }
     
