--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -65,4 +65,16 @@
     }
 }
 
+@media screen and (min-width : 1024px) {
+    .header {
+         .header__logos {
+
+            #drop-icon {
+                display: none;
+            }
+            
+        }
+    }
+}
+
 
