--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,126 +1,111 @@
+@import '../../sass/styles.scss';
+
 @media screen and (min-width : 320px) {
     .header {
-     width: 80%;
-     margin: 20px auto; 
-     }
-     .header__logos {
+        width: 80%;
+        margin: 20px auto;
+
+        nav, .download__btn {
+         display: none;
+        }
+
+        .items {
          width: 100%;
-         display: flex;
-         justify-content: space-between;
-         align-items: center; 
-     }
-     .header__logos a {
-      height: fit-content;
-     } 
-     .header__dropmenu {
-         margin-top: 46.5px;
-         height: 600px;
- 
-         button {
-             width: 170px;
-             height: 52px;
-             color: #1894FF;
-             background-color: #E6F3FF;
-             border: none;
-             font-weight: bold;
-             font-size: 14px;
-             border-radius: 10px;
+         @include flexCenter;
+         
+         .dropIcon {
+             display: block;
          }
-         hr {
-             width: 100%;
-             margin-top: 27px;
-             opacity: .1;
-         }
-         .dropmenu__items {
-             margin-top: 32.5px;
-         }
-         h3 {
-             font-size: 16px;
-             color: #1894FF;
-         }
-         h3::before {
-             content: '';
-             border-radius: 25px;
-             height: 24px;
-             border: 2px solid #1894FF;
-             margin-left: 14px;
-         }
-         li {
-             list-style: none;
-             margin-top: 33px;
-             border-bottom: none;
-             a {
-                 text-decoration: none;
-                 color: black;
-                 font-weight: lighter;
-                 padding-bottom: 10px;
-             }
-         :hover {
-             color: #1894FF;
-             border-bottom: 2px solid #1894FF;
-         }
-         }
-     
-     }
+        }
+
+        .dropmenu {
+            margin-top: 46.5px;
+            height: 600px;
+
+            button {
+                width: 170px !important;
+                @include ghostButton;
+            }
+            hr {
+                width: 100%;
+                margin-top: 27px;
+                opacity: .1;
+            }
+            .dropItems {
+                margin-top: 32.5px;
+            }
+            h3 {
+                font-size: 15px;
+                color: $primaryColor;
+                margin-top: 32.5px;
+
+                &::before {
+                    @include beforeText;
+                    border-color: $primaryColor !important;
+                }
+            }
+            li {
+                list-style: none;
+                margin-top: 33px;
+                border: 2px solid white;  
+                a {
+                    @include aTag;
+                    padding-bottom: 10px;
+
+                    &:hover {
+                        @include hoverIcon;
+                    }
+                }
+            }
+        }
+    }
  }
  
  @media screen and (min-width : 1024px) {
      .header {
-        width: 90%;
+        width: 75%;
         margin: 29px auto;
 
-          .header__logos {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
- 
-             .dropIcon {
-                 display: none;
-             }
+        .dropmenu {
+            display: none;
+        }
 
-             nav {
-                 width: 45%;
+        nav, .download__btn {
+            display: block;
+        }
 
-                 ul {
-                     display: flex;
-                     width: 100%;
-                     justify-content: space-between;
-                     align-items: center;
-                    a {
-                       text-decoration: none;
-                       color: black;
-                       border: 2px solid white;
-                       font-weight: lighter;
-                       padding-bottom: 5px; 
+        .items {
+            @include flexCenter;
 
-                       li {
-                            list-style: none;
-                            padding-bottom: 5px;
-                       }
+            .dropIcon {
+                display: none;
+            }
+            nav {
+                 width: 50%;
 
-                       &:hover {
-                           color: #1894FF;
-                           border-bottom: 2px solid #1894FF;
-                       }
-                    }
-                     
-                 }
-             }
-                button.download__btn {
-                    width: 15%;
-                    height: 52px;
-                    font-weight: bold;
-                    font-size: 16px;
-                    color: #1894FF;
-                    background-color: #E6F3FF;
-                    border: none;
-                    border-radius: 10px;
-                    cursor: pointer;
+                ul {
+                    width: 100%;
+                    padding: 0;
+                    @include flexCenter;
+
+                        li {
+                            @include liTag;
+
+                            a {
+                                @include aTag;
+                                padding-bottom: 10px;
+
+                                &:hover {
+                                    @include hoverIcon;
+                                }
+                            }
+                        }
                 }
-                 
-             
-             
-         }
-     }
- }
+            }
+            button {
+                    @include ghostButton;
+            }           
+        }
+    }
+}
  
