--- a/src/assets/sass/_Mixins.scss
+++ b/src/assets/sass/_Mixins.scss
@@ -69,3 +69,9 @@
     justify-content: space-between;
     align-items: center;
 }
+
+@mixin flexCenterColumn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
