continue make styles modular and make the main page more responsive

--- a/src/assets/sass/_Mixins.scss
+++ b/src/assets/sass/_Mixins.scss
@@ -75,3 +75,14 @@
     flex-direction: column;
     justify-content: center;
 }
+
+@mixin box {
+    width: 80px;
+    height: 80px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: $boxShadow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
