--- a/src/components/Sec1/Sec1.module.scss
+++ b/src/components/Sec1/Sec1.module.scss
@@ -4,37 +4,53 @@
     .sec1 {
         width: 80%;
         margin: 40px auto;
-        @include flexCenterColumn;
+        @include flex(column, center, center);
 
-        img:first-child {
-            display: none;
-        }
-        img {
+        .image {
             width: 100%;
+            img:first-child {
+                display: none;
+            }
+            img {
+                width: 100%;
+            }
         }
+        
         .content {
-            text-align: center;
-
+            width: 100%;
+                text-align: center;
             h2 {
                 color: $primaryColor;
             }
 
             .btns {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+                // @include flexCenter;
+                @include flex(column, unset, center);
                 margin-top: 60px;
 
                 .btn1 {
                     @include primaryButton;
-                    width: 70% !important;
+                    width: 100%;
                 }
                 .btn2 {
                     @include commonButton;
-                    width: 70% !important; 
+                    width: 100%; 
                 }
 
             }
+        }
+    }
+}
+
+@media screen and (min-width : 500px) and (max-width: 1023px) {
+    .sec1 {
+        .content {
+            width: 60%;
+        }
+        .image {
+            width: 70%;
+            max-width: 500px;
+            
         }
     }
 }
@@ -43,9 +59,7 @@
     .sec1 {
         width: 75%;
         margin: 40px auto;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: space-between;
+        @include flex(row-reverse, space-between, center);
 
         .image {
             width: 60%;
@@ -63,7 +77,7 @@
                 height: 336px;
                 position: absolute;
                 top: 20%;
-                left: 0;
+                right: 30%;
             }
         }
 
@@ -79,10 +93,15 @@
             }
 
             .btns {
-                flex-direction: row;
+                @include flex(row,unset, unset);
+                width: 100%;
                 margin-top: 37.5px;
-
+                
+                .btn1 {
+                    width: 100%;
+                }
                 .btn2 {
+                    width: 100%;
                     margin-top: 0;
                     margin-right: 14px
                 }
