--- a/src/components/Sec3/Sec3.module.scss
+++ b/src/components/Sec3/Sec3.module.scss
@@ -6,30 +6,17 @@
         margin: 84.5px auto 37px auto;
 
         .content {
-            display: flex;
-            flex-direction: column;
             width: 100%;
-            justify-content: space-between;
+            @include flex(column, space-between, unset);
 
             .boxes {
-                display: flex;
-                flex-direction: row;
                 width: 175%;
+                @include flex(row, space-between, unset);
                 margin-top: 41.5px;
-                justify-content: space-between;
 
                 .box {
-                    width: 120px;
-                    height: 120px;
-                    border: none;
-                    border-radius: 20px;
-                    -webkit-box-shadow: 0px 0px 25px 0px rgba           (35,97,181,0.2); 
-                    box-shadow: 0px 0px 25px 0px rgba(35,97,            181,0.2);
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-
+                    @include boxing(100px, 100px);
+                    @include flex(column,center, center);
                     img {
                         width: 45px;
                         height: 43px;
@@ -42,8 +29,6 @@
                         filter: grayscale(100%);
                         opacity: .5;
                     }
-
-
                 }
 
             }
@@ -51,18 +36,14 @@
             .progress_content {
                 width: 100%;
                 height: 480px;
-                align-self: center;
                 margin-top: 37px;
                 p {
-                    font-size: 12px;
-                    font-weight: lighter;
-                    line-height: 1.8rem;
+                    @include pText($pXs, lighter, 1.8rem)
                 }
                 .progress {
                     margin-top: 32px;
                     width: 100%;
-                    height: 250px;
-                    display: flex;
+                    @include flex(row, unset, unset);
 
                     .progress_bar {
                         position: relative;
@@ -72,20 +53,13 @@
                              position: absolute;
                         }
                         .v__line {
-                            width: 1px;
-                            height: 80px;
-                            margin-right: 17px;
-                            background-color: #E6F3FF;
-                            z-index: -1;
+                            @include vLine;
                         }
                     }
                     .progress_steps {
-                        margin-right: 10px;
-                        height: 245px;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: space-around;
-                        margin-top: 10px;
+                        height: 240px;
+                        margin: 10px 10px 0 0;
+                        @include flex(column, space-around, unset);
 
                         .progress_step {
                             h6 {
@@ -93,10 +67,8 @@
                                 font-size: $pSm;
                             }
                             p {
-                                font-size: $pXs;
-                                line-height: 1.4rem;
+                                @include pText($pXs, lighter, 1.4rem);
                                 margin-top: 10px;
-                                font-weight: lighter;
                             }
                         }
                     }
@@ -108,40 +80,36 @@
     }
 }
 
+@media screen and (min-width: 500px) and (max-width : 1023px) {
+    .sec3 {
+        .content {
+            .boxes {
+                width: 110%;
+                justify-content: space-evenly;
+            }
+        }
+    }
+}
+
 @media screen and (min-width : 1024px) {
     .sec3 {
-        width: 75%;
+        width: 80%;
         margin: 225px auto;
-        height: 500px;
+        // height: 500px;
 
         .content {
-            display: flex;
-            flex-direction: row ;
             width: 100%;
-            justify-content: space-between;
+            @include flex(row, space-between, unset);
 
             .boxes {
-                display: flex;
-                flex-direction: row;
+                @include flex(row, space-between, center);
                 flex-wrap: wrap;
-                width: 368px;
+                width: 360px;
                 height: 374px;
                 margin-top: 41.5px;
-                justify-content: space-between;
-                align-items: center; 
-
                 .box {
-                    width: 160px;
-                    height: 160px;
-                    border: none;
-                    border-radius: 25px;
-                    -webkit-box-shadow: 0px 0px 25px 0px rgba           (35,97,181,0.2); 
-                    box-shadow: 0px 0px 25px 0px rgba(35,97,            181,0.2);
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center; 
-
+                    @include boxing(160px, 160px);
+                    @include flex(column, center, center);
                     img {
                         width: 67px;
                         height: 58px;
@@ -158,19 +126,16 @@
             }
 
             .progress_content {
-                width: 508px;
+                margin-right: 50px;
+                width: 55%;
                 height: 364px;
-                align-self: center;
                 p {
-                    font-weight: lighter;
-                    line-height: 1.8rem;
-                    font-size: 16px;
+                    @include pText(16px, lighter, 1.8rem)
                 }
                 .progress {
                     margin-top: 32px;
                     width: 100%;
                     height: 220px;
-                    display: flex;
 
                     .progress_bar {
                         position: relative;
@@ -180,31 +145,22 @@
                              position: absolute;
                         }
                         .v__line {
-                            width: 1px;
-                            height: 80px;
-                            margin-right: 17px;
-                            background-color: #E6F3FF;
-                            z-index: -1;
+                           @include vLine;
                         }
                     }
                     .progress_steps {
-                        margin-top: 0;
+                        margin: 0;
                         height: 245px;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: space-around;
+                       @include flex(column, space-around, unset);
 
                         .progress_step {
                             h6 {
                                 margin: 0;
-                                font-size: 16px;
+                                font-size: 18px;
                             }
                             p {
-                                font-size: 14px;
-                                line-height: 1.4rem;
-                                margin-right: 20px;
-                                margin-top: 10px;
-                                font-weight: lighter;
+                                @include pText(16px, lighter, 1.4rem);
+                                margin: 10px 20px 0 0;
                             }
                         }
                     }
