--- a/src/components/Sec5/Sec5.module.scss
+++ b/src/components/Sec5/Sec5.module.scss
@@ -1,191 +1,168 @@
 @import '../../assets/sass/styles.scss';
 
 @media screen and (min-width : 320px) {
-    .sec__6 {
-        width: 90%;
-        height: 550px;
-        border-radius: 15px;
+    .sec__5 {
+        @include boxing(90%, 600px);
         margin: 116px auto;
-        -webkit-box-shadow: 0px 0px 25px 0px rgba(35,97,181,0.2); 
-        box-shadow: 0px 0px 25px 0px rgba(35,97,181,0.2);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-    
-        .sec__6__img {
-            width: 100%;
-            text-align: center;
-            img {
-                width: 80%;
-            }
-        }
-        .sec__6__text {
+        @include flex(column-reverse, space-evenly, center);
+
+        .content__5 {
             width: 80%;
-    
-            p:first-child {
-                font-weight: bold;
-                color: #2361B5;
-    
-                &::before {
-                    content: '';
-                    height: 24px;
-                    border-radius: 15px;
-                    border: 2px solid #00DE9A;
-                    margin-left: 16px;
-                }
-            }
-            p:last-child {
-                font-weight: lighter;
-                font-size: 12px;
-                line-height: 1.6rem;
-            }
-        }
-        .sec__6__input {
-            width: 80%;
-            background-color: #F9F9F9;
-            height: 55px;
-            border-radius: 10px;
-            position: relative;
-
-            
-
-            .input {
+            .sec__5__text {
                 width: 100%;
-                height: 55px;
-
-                .success {
-                    border: 1px solid #2361B5;
-                }
-                .danger {
-                    border: 1px solid red;
-                }
-
-                 input {
-                width: 100%;
-                height: inherit;
-                background-color: #F9F9F9;
-                border: none;
-                outline-style: none;
-                border-radius: 10px;
-                padding-right: 10px;
     
-                &::placeholder {
-                    padding-right: 15px;
-                    font-size: 12px;
-                }
-            }
-            button {
-                font-size: 12px;
-                font-weight: bold;
-                color: white;
-                background-color: #1894FF;
-                padding: 12px 11px 13px 16px;
-                border: none;
-                border-radius: 10px;
-                position: absolute;
-                top: 20%;
-                left: 0;
-            }
-          }
-    
-           
-        }
-    }
-}
-
-@media screen and (min-width : 1024px) {
-    .sec__6 {
-        width: 75%;
-        height: 430px;
-        border-radius: 15px;
-        margin: 116px auto;
-        -webkit-box-shadow: 0px 0px 25px 0px rgba(35,97,181,0.2); 
-        box-shadow: 0px 0px 25px 0px rgba(35,97,181,0.2);
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-evenly;
-
-        .content__6 {
-            width: 40%;
-
-            .sec__6__text {
-                width: 100%;
-        
                 p:first-child {
                     font-weight: bold;
-                    color: #2361B5;
-                    font-size: 20px;
-        
-                    &::before {
-                        content: '';
-                        height: 24px;
-                        border-radius: 15px;
-                        border: 2px solid #00DE9A;
-                        margin-left: 16px;
+                    color: $epiblueColor;
+                     &::before {
+                        @include beforeText;
                     }
                 }
                 p:last-child {
-                    font-weight: lighter;
-                    font-size: 16px;
-                    line-height: 1.8rem;
+                    @include pText($pSm, lighter, 1.6rem);
                 }
             }
-            .sec__6__input {
+            .sec__5__input {
                 width: 100%;
                 background-color: #F9F9F9;
                 height: 55px;
                 border-radius: 10px;
                 position: relative;
-                margin-top: 36px;
+                margin-top: 34px;
+
                 .input {
                     width: 100%;
                     height: 55px;
-    
+
                     .success {
-                        border: 1px solid #2361B5;
+                        border: $borderPrimary;
                     }
                     .danger {
-                        border: 1px solid red;
+                        border: $borderDanger;
                     }
-    
-                     input {
-                    width: 100%;
-                    height: inherit;
-                    background-color: #F9F9F9;
-                    border: none;
-                    outline-style: none;
-                    border-radius: 10px;
-                    padding-right: 10px;
-        
-                    &::placeholder {
-                        padding-right: 15px;
-                        font-size: 16px;
-                    }
-                }
-                button {
-                    font-size: 16px;
-                    font-weight: bold;
-                    color: white;
-                    background-color: #1894FF;
-                    padding: 14px 18px 11px 24px;
-                    border: none;
-                    border-radius: 10px;
-                    position: absolute;
-                    top: 15%;
-                    left: 0;
-                }
-              }
-        
-               
-            }
 
+                    input {
+                        width: 100%;
+                        height: inherit;
+                        background-color: #F9F9F9;
+                        border: none;
+                        outline-style: none;
+                        border-radius: 10px;
+                        padding-right: 10px;
+    
+                        &::placeholder {
+                            padding-right: 15px;
+                            font-size: 12px;
+                        }
+                        &:focus {
+                            background-color: $cloudyColor;  
+                        }
+                    }
+                    button {
+                        @include btnInput;
+                        padding: 12px 11px 13px 16px;
+                        top: 15%;
+                    }
+                }
+            }
+        }
+        .sec__5__img {
+            width: 80%;
+            img {
+                width: 100%;
+            }
+        } 
+    }
+}
+
+@media screen and (min-width : 500px) and (max-width : 1023px) {
+    .sec__5 {
+        .sec__5__img {
+            width: 60%;
+            text-align: center;
+            img {
+                max-width: 370px;
+            }
+        }
+    }
+
+}
+
+
+@media screen and (min-width : 1024px) {
+    .sec__5 {
+        @include boxing(80%, 430px);
+        @include flex(row, space-evenly, center);
+
+        .content__5 {
+            width: 40%;
+
+            .sec__5__text {
+                width: 100%;
+
+                p:first-child {
+                    @include pText(20px, bold, unset);
+                    color: $epiblueColor;
+
+                    &::before {
+                        @include beforeText;
+                    }
+                }
+                p:last-child {
+                    @include pText(16px, lighter, 1.8rem);
+                }
+            }
+            .sec__5__input {
+                    width: 100%;
+                    background-color: #F9F9F9;
+                    height: 55px;
+                    border-radius: 10px;
+                    position: relative;
+                    margin-top: 36px;
+
+                .input {
+                        width: 100%;
+                        height: 55px;
+    
+                        .success {
+                            border: $borderPrimary;
+                        }
+                        .danger {
+                            border: $borderDanger;
+                        }
+    
+                    input {
+                        width: 100%;
+                        height: inherit;
+                        background-color: #F9F9F9;
+                        border: none;
+                        outline-style: none;
+                        border-radius: 10px;
+                        padding-right: 10px;
+        
+                        &::placeholder {
+                            padding-right: 15px;
+                            font-size: 16px;
+                        }
+                    }
+                    button {
+                        font-size: 16px;
+                        font-weight: bold;
+                        color: white;
+                        background-color: #1894FF;
+                        padding: 14px 18px 11px 24px;
+                        border: none;
+                        border-radius: 10px;
+                        position: absolute;
+                        top: 15%;
+                        left: 0;
+                    }
+                } 
+            }
         }
     
-        .sec__6__img {
+        .sec__5__img {
             width: 40%;
-            text-align: center;
             img {
                 width: 100%;
             }
