implement modal for 2 inputs in main page

--- a/src/assets/sass/_Mixins.scss
+++ b/src/assets/sass/_Mixins.scss
@@ -121,9 +121,9 @@
     border: none;
     color: white;
     padding: 10px 23px 12px 25px;
-    &:hover {
-        background-color: $cloudyColor;
-        color: $primaryColor;
-    }
+    // &:hover {
+    //     background-color: $inputFocus;
+    //     color: $primaryColor;
+    // }
 }
 
