--- a/src/components/Sec5/Sec5.module.scss
+++ b/src/components/Sec5/Sec5.module.scss
@@ -139,14 +139,18 @@
                         outline-style: none;
                         border-radius: 10px;
                         padding-right: 10px;
+
+                        &:focus {
+                            background-color: #e6f3ff;
+                        }
         
                         &::placeholder {
                             padding-right: 15px;
-                            font-size: 16px;
+                            font-size: 14px;
                         }
                     }
                     button {
-                        font-size: 16px;
+                        font-size: 14px;
                         font-weight: bold;
                         color: white;
                         background-color: #1894FF;
