fix directory bugs

--- a/src/components/MainLanding/Sec1/Sec1.module.scss
+++ b/src/components/MainLanding/Sec1/Sec1.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/sass/styles.scss';
+@import '../../../assets/sass/styles';
 
 @media screen and (min-width : 320px) {
     .sec1 {
