--- a/src/components/MainLanding/Sec3/HeaderTitle/HeaderTitle.module.scss
+++ b/src/components/MainLanding/Sec3/HeaderTitle/HeaderTitle.module.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/sass/styles.scss';
+@import '../../../../assets/sass/styles';
 
 @media screen and (min-width : 320px) and (max-width : 768px) {
     .bold {
