--- a/src/components/PharMemShipComps/Section1/PharmBoxInfo/PharmBoxInfo.module.scss
+++ b/src/components/PharMemShipComps/Section1/PharmBoxInfo/PharmBoxInfo.module.scss
@@ -1,5 +1,124 @@
 @import '../../../../assets/sass/styles';
 
+@media screen and (min-width : 320px) {
+    .pharmBox {
+        width: 100%;
+        height: 84px;
+        border: none;
+        border-radius: 20px;
+        box-shadow: $boxShadow ;
+        @include flex(row, space-between, center);
+
+        .photo {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+            background-color: $primaryColor;
+            border-radius: 50%;
+            @include flex(row, center, center);
+
+            img {
+                width: 15px;
+                height: 15px;
+            }
+        }
+        .pharmText {
+            margin-right: 17px;
+
+            h4 {
+                font-size: 13px;
+                margin-bottom: 0;
+            }
+            .text {
+                display: flex;
+                margin-top: 10px;
+
+                p {
+                    width: 100%;
+                    font-size: 8px;
+                    margin-right: 10.5px;
+                }
+            }
+        }
+        .time {
+            width: 53px;
+            height: 18px;
+            background-color: $primaryColor;
+            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-self: flex-start;
+            margin: 11px 0 0 16px;
+
+            p {
+                font-size: 7px;
+                color: white;
+            }
+        }
+    }
+} 
+
+@media screen and (min-width : 500px) and (max-width : 1023px) {
+    .pharmBox {
+        width: 100%;
+        max-width: 348px;
+        height: 84px;
+        border: none;
+        border-radius: 20px;
+        box-shadow: $boxShadow ;
+        @include flex(row, space-between, center);
+
+        .photo {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+            background-color: $primaryColor;
+            border-radius: 50%;
+            @include flex(row, center, center);
+
+            img {
+                width: 15px;
+                height: 15px;
+            }
+        }
+        .pharmText {
+            margin-right: 17px;
+
+            h4 {
+                font-size: 13px;
+                margin-bottom: 0;
+            }
+            .text {
+                display: flex;
+                margin-top: 10px;
+
+                p {
+                    width: 100%;
+                    font-size: 8px;
+                    margin-right: 10.5px;
+                }
+            }
+        }
+        .time {
+            width: 53px;
+            height: 18px;
+            background-color: $primaryColor;
+            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-self: flex-start;
+            margin: 11px 0 0 16px;
+
+            p {
+                font-size: 7px;
+                color: white;
+            }
+        }
+    }
+} 
+
 @media screen and (min-width : 1024px) {
     .pharmBox {
         width: 438px;
@@ -16,6 +135,11 @@
             background-color: $primaryColor;
             border-radius: 50%;
             @include flex(row, center, center);
+
+            img {
+                width: 20px;
+                height: 20px;
+            }
         }
         .pharmText {
             margin-right: 17px;
