--- a/src/components/PharMemShipComps/Section1/PharmBoxInfoSm/PharmBoxInfoSm.module.scss
+++ b/src/components/PharMemShipComps/Section1/PharmBoxInfoSm/PharmBoxInfoSm.module.scss
@@ -1,5 +1,115 @@
 @import '../../../../assets/sass/styles';
 
+@media screen and (min-width : 320px) and (max-width : 499px) {
+    .pharmBox {
+        display: none;
+        // width: 306px;
+        // height: 87px;
+        // border: none;
+        // border-radius: 20px;
+        // box-shadow: $boxShadow ;
+        // @include flex(row, space-between, center);
+        // align-self: center;
+        // opacity: .7;
+
+        // .photo {
+        //     width: 52px;
+        //     height: 52px;
+        //     margin-right: 15px;
+        //     background-color: $primaryColor;
+        //     border-radius: 50%;
+        //     @include flex(row, center, center);
+            
+        //     img {
+        //         width: 15px;
+        //         height: 15px;
+        //     }
+        // }
+        // .pharmText {
+        //     // margin-right: 17px;
+        //     width: 70%;
+
+        //     h4 {
+        //         font-size: 13px;
+        //         margin-bottom: 0;
+        //     }
+        //     .text {
+        //         display: flex;
+        //         margin-top: 10px;
+
+        //         p {
+        //             width: 200px;
+        //             font-size: 8px;
+        //             margin-right: 25.5px;
+        //         }
+        //     }
+        // }
+    }
+}
+
+@media screen and (min-width : 500px) {
+    .pharmBox {
+        width: 100%;
+        max-width: 300px;
+        height: 87px;
+        border: none;
+        border-radius: 20px;
+        box-shadow: $boxShadow ;
+        @include flex(row, space-between, center);
+        align-self: center;
+        opacity: .7;
+
+        .photo {
+            width: 52px;
+            height: 52px;
+            margin-right: 15px;
+            background-color: $primaryColor;
+            border-radius: 50%;
+            @include flex(row, center, center);
+            
+            img {
+                width: 15px;
+                height: 15px;
+            }
+        }
+        .pharmText {
+            // margin-right: 17px;
+            width: 70%;
+
+            h4 {
+                font-size: 13px;
+                margin-bottom: 0;
+            }
+            .text {
+                display: flex;
+                margin-top: 10px;
+
+                p {
+                    width: 200px;
+                    font-size: 8px;
+                    margin-right: 25.5px;
+                }
+            }
+        }
+        // .time {
+        //     width: 80px;
+        //     height: 28px;
+        //     background-color: $primaryColor;
+        //     border-radius: 10px;
+        //     display: flex;
+        //     justify-content: center;
+        //     align-items: center;
+        //     align-self: flex-start;
+        //     margin: 11px 0 0 16px;
+
+        //     p {
+        //         font-size: $pXs;
+        //         color: white;
+        //     }
+        // }
+    }
+}
+
 @media screen and (min-width : 1024px) {
     .pharmBox {
         width: 306px;
