--- a/src/components/PharMemShipComps/Section1/Section1.module.scss
+++ b/src/components/PharMemShipComps/Section1/Section1.module.scss
@@ -1,6 +1,54 @@
 @import '../../../assets/sass/styles';
 
-@media screen and (min-width : 320px) {}
+@media screen and (min-width : 320px) {
+    .section1 {
+        width: 80%;
+        height: 450px;
+        margin: 73px auto;
+        @include flex(column-reverse, space-between, center);
+
+        .content {
+            width: 100%;
+            
+            h3 {
+                font-size: 24px;
+                color: $primaryColor;
+            }
+            p {
+                @include pText(14px, lighter, 1.8rem);
+            }
+        }
+        .pharmInformation {
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (min-width : 500px) and (max-width : 1023px) {
+    .section1 {
+        width: 80%;
+        height: 600px;
+        margin: 73px auto;
+        @include flex(column-reverse, space-between, center);
+
+        .content {
+            width: 100%;
+            
+            h3 {
+                font-size: 24px;
+                color: $primaryColor;
+            }
+            p {
+                @include pText(14px, lighter, 1.8rem);
+            }
+        }
+        .pharmInformation {
+            width: 100%;
+            height: 320px;
+            @include flex(column, space-between, unset);
+        }
+    }
+}
 
 @media screen and (min-width : 1024px) {
     .section1 {
