--- a/src/components/PharMemShipComps/Section2/Section2.module.scss
+++ b/src/components/PharMemShipComps/Section2/Section2.module.scss
@@ -1,5 +1,42 @@
 @import '../../../assets/sass/styles';
 
+@media screen and (min-width : 320px) {
+    .section2 {
+        width: 100%;
+        height: 450px;
+        background-color: $primaryColor;
+        @include flex(row, center, center);
+
+        .container {
+            width: 80%;
+            height: 363px;
+            @include flex(column, space-between, center);
+
+            .statistic {
+                @include flex(column, space-between, center);
+                height: 82px;
+                p{
+                    color: white;
+                    font-size: 14px;
+                    margin: 0;
+                }
+                p:last-child {
+                    font-size: 36px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and  (min-width : 768px) {
+    .section2 {
+        .container {
+            @include flex(row, space-between, center);
+        }
+    }
+    
+}
+
 @media screen and (min-width : 1024px) {
     .section2 {
         width: 100%;
